2017-11-18  Bruno Haible  <bruno@clisp.org>

	Fix initialization of modules in SINGLEMAP_MEMORY model.
	Reported by Jean Louis <bugs@gnu.support>
	at <https://sourceforge.net/p/clisp/bugs/713/>.
	* utils/modprep.lisp (print-tables-2): Emit statements that store the
	keyword vectors of the SUBRs in their heap-allocated location, not in
	their preliminary location.
	* spvw.d (init_subr_tab_1): Set module->stab also if the module has no
	SUBRs. (Just a no-op.)

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Allow clisp! scripts to have file names with spaces.
	* _clisp.c: Don't split argv[1] if it looks like a file name.

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Allow UTF-8 encoded hard space in first argument of clisp! invocation.
	* _clisp.c: Treat UTF-8 encoded hard space like ISO-8859-1 encoded hard
	space.

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Allow file names with spaces to be passed as first argument to 'clisp'.
	Reported by Jean Louis <bugs@gnu.support>
	at <https://sourceforge.net/p/clisp/bugs/699/>.
	* _clisp.c: Disable the argv[1] splitting hack unless SHEBANG_SUPPORT
	is defined.
	* _distmakefile: Install a program 'clisp!' next to 'clisp'.
	* makemake.in (install-bin): Likewise.
	(uninstall-bin): Unstill 'clisp!'.

2017-11-17  Bruno Haible  <bruno@clisp.org>

	Revamp the installation documentation.
	* INSTALL.windows: New file, mostly borrowed from GNU gettext.
	* win32msvc/INSTALL: Mark as obsolete.
	* INSTALL: Mention INSTALL.windows.
	* DEPENDENCIES: New file.
	* HACKING: New file.

2017-11-17  Sam Steingold  <sds@gnu.org>

	Use UTF-8 for all PCRE strings.
	* modules/pcre/cpcre.c (PCRE:PCRE-COMPILE): Use UTF-8 even for
	error messages.
	(fullinfo_nametable): Use UTF-8 for pcre_fullinfo().
	(PCRE:PCRE-NAME-TO-INDEX): Use UTF-8 for pcre_get_stringnumber().

2017-11-17  Sam Steingold  <sds@gnu.org>

	* loop.lisp: Use revadd pervasively.
	Remove a spurious CASE clause.

2017-11-16  Sam Steingold  <sds@gnu.org>
